--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 APP_PORT=5500
 DEBUG_MODE=true
-DB_URL= mongodb://127.0.0.1:27017/rest-api
+DB_URL= mongodb://ecomAdmin:admin@127.0.0.1:27017/ecom?authMechanism=DEFAULT
 JWT_SECRET=secret
